[workspace]
members = ["sys", "sdecay", "sdecay/nolt", "examples/*", "sys/database/*"]
resolver = "3"

[workspace.package]
authors = ["Diachenko Artem", "Artem artemdiachenko09@gmail.com"]
repository = "https://github.com/Dzuchun/sdecay"
license = "LGPL-3.0-or-later"
edition = '2024'

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
pub_use_of_private_extern_crate = "deny"
unnameable_types = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"

[workspace.lints.clippy]
module_name_repetitions = "allow"
