[package]
name = "sdecay"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
denylist = [ "git" ] # don't try enabling git feature
always_include_features = [ "database", "database-min", "database-nocoinc-min" ]

[dependencies]
sdecay-sys.workspace = true
thiserror = { version = "2.0.12", default-features = false }
# proc macros
sdecay-nolt.workspace = true
paste = "1.0.15"
pathsep = "0.1"

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }

[features]
default = ["std"]
std = ["alloc", "thiserror/std"]
alloc = []
git = ["sdecay-sys/git"]
database = ["sdecay-sys/database"]
database-min = ["sdecay-sys/database-min"]
database-nocoinc-min = ["sdecay-sys/database-nocoinc-min"]

[lints]
workspace = true
