[package]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
name = "sdecay"
version = "0.1.0"
description = "Bindings for SandiaDecay C++ library, used to compute nuclide mixtures"
readme = "README.md"
keywords = [
    "physics",
    "atom",
    "isotope",
    "nuclear-physics", 
]
categories = []
include = [
    # licenses
    "COPYING",
    "COPYING.LESSER",
    # docs
    "README.md",
    "BUILDING.md",
    "FEATURES.md",
    "SAFETY.md",
    "katex.html",
    "doc-theme.css",
    # Rust sources
    "src",
]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "katex.html",
    "--extend-css", "doc-theme.css"
]
all-features = true

[package.metadata.cargo-all-features]
denylist = [ "git" ] # don't try enabling git feature
always_include_features = [ "database", "database-min", "database-nocoinc-min" ]

[dependencies]
sdecay-sys.workspace = true
thiserror = { version = "2.0.12", default-features = false }
# proc macros
sdecay-nolt.workspace = true
paste = "1.0.15"
pathsep = "0.1"

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }

[features]
default = ["std"]
std = ["alloc", "thiserror/std"]
alloc = []
git = ["sdecay-sys/git"]
database = ["sdecay-sys/database"]
database-min = ["sdecay-sys/database-min"]
database-nocoinc-min = ["sdecay-sys/database-nocoinc-min"]

[lints]
workspace = true
