[package]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
name = "sdecay-sys"
version = "0.1.6+cd75314"
links = "SandiaDecay"
description = "Bindings to SandiaDecay C++ library along with some helper functions"
readme = "README.md"
keywords = [
    "bindings",
    "physics",
    "atom",
    "isotope",
    "nuclear-physics", 
]
categories = ["external-ffi-bindings", "no-std"]
include = [
    # licenses
    "COPYING",
    "COPYING.LESSER",
    "vendor/3rdparty/rapidxml/license.txt",
    "vendor/LICENSE.txt",
    # docs
    "README.md",
    "BUILDING.md",
    "katex.html",
    "doc-theme.css",
    # C++ sources
    "vendor/3rdparty/rapidxml/*.hpp",
    "vendor/SandiaDecay.cpp",
    "vendor/SandiaDecay.h",
    "wrapper.cc",
    "wrapper.hpp",
    # Rust sources
    "build.rs",
    "bindings.rs",
    "lib.rs",
]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "katex.html",
    "--extend-css", "doc-theme.css"
]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = ["database", "database-min", "database-nocoinc-min"]

[lib]
path = "lib.rs"

[build-dependencies]
cc = "1.2.27"

[dependencies]
sandia-decay-database = { workspace = true, optional = true }
sandia-decay-database-min = { workspace = true, optional = true }
sandia-decay-database-nocoinc-min = { workspace = true, optional = true }

[features]
default = []
git = []
database = ["dep:sandia-decay-database"]
database-min = ["dep:sandia-decay-database-min"]
database-nocoinc-min = ["dep:sandia-decay-database-nocoinc-min"]

[lints]
workspace = true
