[package]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
name = "sdecay-nolt"
version = "0.1.0"
description = "This is a helper proc-macro crate for `sdecay`"
readme = "README.md"
keywords = []
categories = []
include = [
    # licenses
    "COPYING",
    "COPYING.LESSER",
    # docs
    "README.md",
    # Rust sources
    "lib.rs",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
syn = { version = "2.0.104", features = ["printing"] }
quote = "1.0.40"

[lints]
workspace = true
