[package]
name = "sandia-decay-database-common"
version = "0.1.1"
edition = "2024"
description = "Common code for SandiaDecay database crates"
repository = "https://github.com/Dzuchun/sdecay/sys/database/common"
authors = ["Diachenko Artem", "Artem artemdiachenko09@gmail.com"]
license = "LGPL-3.0-or-later"

[dependencies]
minreq = { version = "2.14.0", features = ["https-native"] }

[lib]
path = "lib.rs"
