[package]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
name = "sandia-decay-database-common"
version = "0.1.5"
description = "Common code for SandiaDecay database crates"

[dependencies]
minreq = { version = "2.14.0", features = ["https-native"] }

[lib]
path = "lib.rs"
