[package]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
name = "sandia-decay-database-min"
version = "0.1.0-cd75314b56e12b80497531a1fbeed9c8e9968403"
description = "`min` database provided by SandiaDecay"
readme = "README.md"

[build-dependencies]
sandia-decay-database-common.workspace = true

[dependencies]
pathsep = "0.1"

[lib]
path = "lib.rs"
