[package]
name = "sandia-decay-database-nocoinc-min"
version = "0.1.0-cd75314b56e12b80497531a1fbeed9c8e9968403"
edition = "2024"
description = "`nocoinc-min` database provided by SandiaDecay"
repository = "https://github.com/Dzuchun/sdecay/sys/database/nocoinc-min"
readme = "README.md"
authors = ["Diachenko Artem", "Artem artemdiachenko09@gmail.com"]
license = "LGPL-3.0-or-later"

[build-dependencies]
sandia-decay-database-common = "0.1.1"

[dependencies]
pathsep = "0.1"

[lib]
path = "lib.rs"

