[package]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
name = "sandia-decay-database-nocoinc-min"
version = "0.2.0+cd75314"
description = "`nocoinc-min` database provided by SandiaDecay"
readme = "README.md"

[build-dependencies]
sandia-decay-database-common.workspace = true

[dependencies]
pathsep = "0.1"

[lib]
path = "lib.rs"
